--- a/package.json
+++ b/package.json
@@ -2,17 +2,30 @@
   "name": "google-meet-clone",
   "version": "0.1.0",
   "private": true,
+  "keywords": [
+    "typescript",
+    "node",
+    "template"
+  ],
+  "author": {
+    "name": "patricia"
+  },
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.27",
+    "@types/node": "^16.11.33",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "hashids": "^2.2.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "twilio": "^3.76.1",
+    "twilio-video": "^2.21.1",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
@@ -45,8 +58,8 @@
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3"
   },
-  "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write"
+  "engines": {
+    "node": ">=12",
+    "npm": ">=6"
   }
 }
